--- a/calculator_mvc/index.html
+++ b/calculator_mvc/index.html
@@ -6,27 +6,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div id="container" class="calculator">
-    <input type="text" id="display" class="display" disabled  />
-    <div id="buttons" class='buttons'>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>/</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>*</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>-</button>
-        <button>0</button>
-        <button>C</button>
-        <button>=</button>
-        <button>+</button>
-    </div>
-</div>
+<div id="root" class="root"></div>
 <script type="module" src="./app.js"></script>
 </body>
 </html>
