внесены собственные изменения

--- a/filmopoisk_js/index.html
+++ b/filmopoisk_js/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Фильмопоиск</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,33 +18,11 @@
 </head>
 
 <body>
-    <div  id="preloader-wrapper" class="preloader-wrapper" >
-        <div id="preloader"></div>
-    </div>
+<div id="root"></div>
 
-    <nav class="header">
-        <div class="search-container">
-            <div class="nav-brand" id="nav-brand">Фильмопоиск</div>
-            <div class="form-search" id ="form-search">
-                <input id="search-input" type="text" placeholder="Фильмы" autocomplete="off">
-                <div id="btn-search" class="btn-search"><ion-icon name="search-outline"></ion-icon></div>
-                <div id="dropdown-container"></div>
-            </div>
-        </div>
-    </nav>
-
-    <div class="container">
-
-        <div id="wrapper-sidebar" class="wrapper-sidebar"></div>
-
-        <div id="wrapper" class="wrapper"></div>
-
-    </div>
-
-    <script type="module" src="./index.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    </script>
+<script type="module" src="./index.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
 </body>
 
